data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4190.wast
;; 9. **Test for Function Type Mismatch with Operand Stack Overflow**:    Introduce `call_indirect` with a mismatched function type as an operand in a loop structure where operand stack conditions aren't handled correctly, potentially causing the loop to repeat infinitely.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (type (func (param f64)))
    (table funcref (elem 0 1))
    (func $test
      (loop $label
        (call_indirect (type 1) (i32.const 0))
        (br $label)
      )
    )
  )
  "type mismatch"
)